include/xslp.h

typedef struct tagXSLPproblem *XSLPprob;
/***************************************************************************\
  * Integer problem attributes                                             *
\**************************************************************************/
#define XSLP_ITER                     12001       //  SLP - NLP iteration count
#define XSLP_STATUS                   12002       //  Bitmap holding the problem convergence status
#define XSLP_UNCONVERGED              12003       //  Number of unconverged values
#define XSLP_SBXCONVERGED             12004       //  Number of step-bounded variables converged only on extended criteria
#define XSLP_CVS                      12005       //  Number of character variables
#define XSLP_XVS                      12006       //  Number of extended variable arrays
#define XSLP_UFS                      12007       //  Number of user functions
#define XSLP_IFS                      12008       //  Number of internal functions
#define XSLP_PENALTYDELTAROW          12009       //  Index of equality row holding the penalties for delta vectors
#define XSLP_PENALTYDELTACOLUMN       12010       //  Index of column costing the penalty delta row
#define XSLP_PENALTYERRORROW          12011       //  Index of equality row holding the penalties for penalty error vectors
#define XSLP_PENALTYERRORCOLUMN       12012       //  Index of column costing the penalty error row
#define XSLP_EQUALSCOLUMN             12013       //  Index of the reserved '=' column
#define XSLP_VARIABLES                12014       //  Number of nonlinear variables
#define XSLP_IMPLICITVARIABLES        12015       //  Number of nonlinear variables appearing only in coefficients
#define XSLP_COEFFICIENTS             12016       //  Number of nonlinear coefficients
#define XSLP_PENALTYDELTAS            12017       //  Number of penalty delta vectors
#define XSLP_PENALTYERRORS            12018       //  Number of penalty error vectors
#define XSLP_PLUSPENALTYERRORS        12019       //  Number of positive penalty error vectors
#define XSLP_MINUSPENALTYERRORS       12020       //  Number of negative penalty error vectors
#define XSLP_UCCONSTRAINEDCOUNT       12021       //  Number of unconverged variables with coefficients in constraining rows
#define XSLP_MIPNODES                 12022       //  Number of nodes explored in MISLP
#define XSLP_MIPITER                  12023       //  Total number of SLP iterations in MISLP
#define XSLP_VERSION                  12024       //  Xpress-SLP major version number
#define XSLP_MINORVERSION             12025       //  Xpress-SLP minor version number
#define XSLP_NONLINEARCONSTRAINTS     12026       //  Number of nonlinear constraints in the problem
#define XSLP_TOLSETS                  12028       //  Number of tolerance sets
#define XSLP_INTERNALFUNCCALLS        12030       //  Number of calls made to internal functions
#define XSLP_USERFUNCCALLS            12031       //  Number of calls made to user functions
#define XSLP_UFINSTANCES              12034       //  Number of user function instances
#define XSLP_ECFCOUNT                 12035       //  Number of infeasible constraints found at the point of linearization
#define XSLP_USEDERIVATIVES           12037       //  Indicates whether numeric or analytic derivatives were used to create the linear approximations and solve the problem 
#define XSLP_PRESOLVEPASSES           12038       //  Number of passes made by the SLP nonlinear presolve procedure
#define XSLP_DELTAS                   12041       //  Number of delta vectors created during augmentation
#define XSLP_ZEROESRESET              12046       //  Number of placeholder entries set to zero
#define XSLP_ZEROESTOTAL              12047       //  Number of potential zero placeholder entries
#define XSLP_ZEROESRETAINED           12048       //  Number of potentially zero placeholders left untouched
#define XSLP_PRESOLVEFIXEDSLPVAR      12051       //  Number of SLP variables fixed by XSLPpresolve
#define XSLP_PRESOLVEFIXEDDR          12052       //  Number of determining rows fixed by XSLPpresolve
#define XSLP_PRESOLVEFIXEDCOEF        12053       //  Number of SLP coefficients fixed by XSLPpresolve
#define XSLP_PRESOLVEFIXEDZCOL        12054       //  Number of variables fixed at zero by XSLPpresolve
#define XSLP_PRESOLVEFIXEDNZCOL       12055       //  Number of variables fixed to a nonzero value by XSLPpresolve
#define XSLP_PRESOLVEDELETEDDELTA     12056       //  Number of potential delta variables deleted by XSLPpresolve
#define XSLP_PRESOLVETIGHTENED        12057       //  Number of bounds tightened by XSLPpresolve
/***************************************************************************\
  * Double control variables                                               *
\**************************************************************************/
#define XSLP_DAMP                        12103       //  Damping factor for updating values of variables
#define XSLP_DAMPEXPAND                  12104       //  Multiplier to increase damping factor during dynamic damping
#define XSLP_DAMPSHRINK                  12105       //  Multiplier to decrease damping factor during dynamic damping
#define XSLP_DELTA_A                     12106       //  Absolute perturbation of values for calculating numerical derivatives
#define XSLP_DELTA_R                     12107       //  Relative perturbation of values for calculating numerical derivatives
#define XSLP_DELTA_Z                     12108       //  Zero tolerance used when calculating numerical derivatives
#define XSLP_DELTACOST                   12109       //  Initial penalty cost multiplier for penalty delta vectors
#define XSLP_DELTAMAXCOST                12110       //  Maximum penalty cost multiplier for penalty delta vectors
#define XSLP_DJTOL                       12112       //  Tolerance on DJ value for determining if a variable is at its step bound
#define XSLP_ERRORCOST                   12113       //  Initial penalty cost multiplier for penalty error vectors
#define XSLP_ERRORMAXCOST                12114       //  Maximum penalty cost multiplier for penalty error vectors
#define XSLP_ERRORTOL_A                  12116       //  Absolute tolerance for error vectors
#define XSLP_EXPAND                      12118       //  Multiplier to increase a step bound
#define XSLP_INFINITY                    12119       //  Value returned by a divide-by-zero in a formula
#define XSLP_MAXWEIGHT                   12120       //  Maximum penalty weight for delta or error vectors
#define XSLP_MINWEIGHT                   12121       //  Minimum penalty weight for delta or error vectors
#define XSLP_SHRINK                      12122       //  Multiplier to reduce a step bound
#define XSLP_ZERO                        12123       //  Absolute zero tolerance
#define XSLP_CTOL                        12124       //  Closure convergence tolerance
#define XSLP_ATOL_A                      12125       //  Absolute delta convergence tolerance
#define XSLP_ATOL_R                      12126       //  Relative delta convergence tolerance
#define XSLP_MTOL_A                      12127       //  Absolute effective matrix element convergence tolerance
#define XSLP_MTOL_R                      12128       //  Relative effective matrix element convergence tolerance
#define XSLP_ITOL_A                      12129       //  Absolute impact convergence tolerance
#define XSLP_ITOL_R                      12130       //  Relative impact convergence tolerance
#define XSLP_STOL_A                      12131       //  Absolute slack convergence tolerance
#define XSLP_STOL_R                      12132       //  Relative slack convergence tolerance
#define XSLP_MVTOL                       12133       //  Marginal value tolerance for determining if a constraint is slack
#define XSLP_XTOL_A                      12134       //  Absolute static objective function (1) tolerance
#define XSLP_XTOL_R                      12135       //  Relative static objective function (1) tolerance
double XSLP_CC XSLPcalluserfunc( XSLPprob Prob, int FuncNumber, void * Arg1, void * Arg2, void * Arg3, void * Arg4, void * Arg5, void * Arg6_);
 
int XSLP_CC XSLPadddfs( XSLPprob Prob, int nDF, const int * ColIndex, const int * RowIndex, const double * DFValue);
 
int XSLP_CC XSLPchgdf( XSLPprob Prob, int ColIndex, int RowIndex, const double * DFValue);
 
int XSLP_CC XSLPchgrowwt( XSLPprob Prob, int RowIndex, const double * Value);
 
int XSLP_CC XSLPchguserfuncobject( XSLPprob Prob, int Entity, void ** Object);
 
int XSLP_CC XSLPdecompose( XSLPprob Prob, int Count, const int * Index);
 
int XSLP_CC XSLPgetdf( XSLPprob Prob, int ColIndex, int RowIndex, double * DFValue);
 
int XSLP_CC XSLPgetdtime( XSLPprob Prob, double * dSeconds);
 
int XSLP_CC XSLPgetfuncinfo( int * ArgInfo, int * CallerFlag, int * nInput, int * nReturn, int * nDelta, int * nInString, int * nOutString, int * nSLPUserFunc, int * nInstance);
 
int XSLP_CC XSLPgetfuncinfoV( void * ArgInfo, int * CallerFlags, int * nInput, int * nReturn, int * nDelta, int * nInString, int * nOutString, int * nSLPUserFunc, int * nInstance);
 
int XSLP_CC XSLPgetfuncobject( int * ArgCount, int ObjType, void ** Object);
 
int XSLP_CC XSLPgetfuncobjectV( void * ArgInfo, int ObjType, void ** Object);
 
int XSLP_CC XSLPgetmessagetype( int Code, int * Type);
 
int XSLP_CC XSLPgetrowwt( XSLPprob Prob, int RowIndex, double * Value);
 
int XSLP_CC XSLPgettime( XSLPprob Prob, int * Seconds, int * MilliSeconds);
 
int XSLP_CC XSLPgetuserfuncobject( XSLPprob Prob, int Entity, void ** Object);
 
int XSLP_CC XSLPgetversion( int * version, int * minorversion);
 
int XSLP_CC XSLPinterrupt( XSLPprob Prob, int Reason);
 
int XSLP_CC XSLPloaddfs( XSLPprob Prob, int nDF, const int * ColIndex, const int * RowIndex, const double * DFValue);
 
int XSLP_CC XSLPprintmsg( XSLPprob Prob, int Type, const char * format);
 
int XSLP_CC XSLPsetfuncobject( int * ArgCount, int ObjType, void * Object);
 
int XSLP_CC XSLPsetfunctionerror( XSLPprob Prob);
 
int XSLP_CC XSLPsetuserfuncinfo( XSLPprob Prob, int * ArgInfo, int CallerFlag, int nInput, int nReturn, int nDelta, int nInString, int nOutString);
 
int XSLP_CC XSLPsetuserfuncobject( XSLPprob Prob, int Entity, void * Object);
 
int XSLP_CC XSLPtime( XSLPprob Prob);
 
int XSLP_CC XSLPuprintmemory( XSLPprob Prob);