include/xslp.bas


Declare Function XSLPgetrowwt Lib "xslp" Alias "_XSLPgetrowwt@12" (ByVal Prob As Long, ByVal Index As Long, ByRef Value As Double) As Long
Declare Function XSLPchgrowwt Lib "xslp" Alias "_XSLPchgrowwt@12" (ByVal Prob As Long, ByVal Index As Long, ByRef Value As Double) As Long

Declare Function XSLPgetintrowinfo Lib "xslp" Alias "_XSLProwinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Long) As Long
Declare Function XSLPgetdblrowinfo Lib "xslp" Alias "_XSLProwinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Double) As Long
Declare Function XSLPsetdblrowinfo Lib "xslp" Alias "_XSLProwinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Double) As Long

Declare Function XSLPreaddfs Lib "xslp" Alias "_XSLPreaddfs@8" (ByVal Prob As Long, ByVal Filename As String) As Long
Declare Function XSLPwritedfs Lib "xslp" Alias "_XSLPwritedfs@8" (ByVal Prob As Long, ByVal Filename As String) As Long
Declare Function XSLPloaddfs Lib "xslp" Alias "_XSLPloaddfs@20" (ByVal Prob As Long, ByVal nDF As Long, ByRef ColIndex As Long, ByRef RowIndex As Long, ByRef DFValue As Double) As Long
Declare Function XSLPadddfs Lib "xslp" Alias "_XSLPadddfs@20" (ByVal Prob As Long, ByVal nDF As Long, ByRef ColIndex As Long, ByRef RowIndex As Long, ByRef DFValue As Double) As Long
Declare Function XSLPgetdf Lib "xslp" Alias "_XSLPgetdf@16" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal RowIndex As Long, ByRef DFValue As Double) As Long
Declare Function XSLPchgdf Lib "xslp" Alias "_XSLPchgdf@16" (ByVal Prob As Long, ByVal ColIndex As Long, ByVal RowIndex As Long, ByRef DFValue As Double) As Long

'****************************************************************************
' User functions
'****************************************************************************
Declare Function XSLPcalluserfunc Lib "xslp" Alias "_XSLPcalluserfunc@32" (ByVal Prob As Long, ByVal FuncNumber As Long, ByRef Arg1 As Double, ByRef Arg2 As Long, ByVal Arg3 As String, ByVal Arg4 As String, ByRef Arg5 As Double, ByRef Arg6 As Double) As Double
Declare Function XSLPchguserfuncobject Lib "xslp" Alias "_XSLPchguserfuncobject@12" (ByVal Prob As Long, ByVal Entity As Long, ByRef obj As Long) As Long
Declare Function XSLPgetfuncinfo Lib "xslp" Alias "_XSLPgetfuncinfo@36" (ByRef ArgInfo As Long, ByRef CallerFlag As Long, ByRef nInput As Long, ByRef nReturn As Long, ByRef nDelta As Long, ByRef nInString As Long, ByRef nOutString As Long, ByRef nSLPUserFunc As Long, ByRef nInstance As Long) As Long
Declare Function XSLPgetfuncinfoV Lib "xslp" Alias "_XSLPgetfuncinfoV@36" (ByRef ArgInfo As Variant, ByRef CallerFlag As Long, ByRef nInput As Long, ByRef nReturn As Long, ByRef nDelta As Long, ByRef nInString As Long, ByRef nOutString As Long, ByRef nSLPUserFunc As Long, ByRef nInstance As Long) As Long
Declare Function XSLPgetfuncobject Lib "xslp" Alias "_XSLPgetfuncobject@12" (ByRef ArgInfo As Long, ByVal ObjType As Long, ByRef obj As Long) As Long
Declare Function XSLPgetfuncobjectV Lib "xslp" Alias "_XSLPgetfuncobjectV@12" (ByRef ArgInfo As Variant, ByVal ObjType As Long, ByRef obj As Long) As Long
Declare Function XSLPgetuserfuncobject Lib "xslp" Alias "_XSLPgetuserfuncobject@12" (ByVal Prob As Long, ByVal Entity As Long, ByRef obj As Long) As Long
Declare Function XSLPsetfuncobject Lib "xslp" Alias "_XSLPsetfuncobject@12" (ByRef ArgInfo As Long, ByVal ObjType As Long, ByVal obj As Long) As Long
Declare Function XSLPsetfunctionerror Lib "xslp" Alias "_XSLPsetfunctionerror@4" (ByVal Prob As Long) As Long
Declare Function XSLPsetuserfuncinfo Lib "xslp" Alias "_XSLPsetuserfuncinfo@32" (ByVal Prob As Long, ByRef ArgInfo As Long, ByVal CallerFlag As Long, ByVal nInput As Long, ByVal nReturn As Long, ByVal nDelta As Long, ByVal nInString As Long, ByVal nOutString As Long) As Long
Declare Function XSLPsetuserfuncobject Lib "xslp" Alias "_XSLPsetuserfuncobject@12" (ByVal Prob As Long, ByVal Entity As Long, ByVal obj As Long) As Long

Declare Function XSLPgetintuserfuncinfo Lib "xslp" Alias "_XSLPuserfuncinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Long) As Long
Declare Function XSLPgetdbluserfuncinfo Lib "xslp" Alias "_XSLPuserfuncinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Double) As Long
Declare Function XSLPsetintuserfuncinfo Lib "xslp" Alias "_XSLPuserfuncinfo@16" (ByVal Prob As Long, ByVal Index As Long,  ByVal theType As Long, ByRef Value As Long) As Long
Declare Function XSLPgetfuncintattrib Lib "xslp" Alias "_XSLPgetfuncattrib@12" (ByRef ArgInfo As Long, ByVal Param As Long, ByRef iValue As Long) As Long
Declare Function XSLPthreadactive Lib "xslp" Alias "_XSLPthreadactive@4" (ByVal ArgInfo As Long) As Long

'****************************************************************************
' Misc
'****************************************************************************
Declare Function XSLPtime Lib "xslp" Alias "_XSLPtime@4" (ByVal Prob As Long) As Long
Declare Function XSLPgettime Lib "xslp" Alias "_XSLPgettime@12" (ByVal Prob As Long, ByRef Seconds As Long, ByRef MilliSeconds As Long) As Long
Declare Function XSLPgetdtime Lib "xslp" Alias "_XSLPgetdtime@8" (ByVal Prob As Long, ByRef dSeconds As Double) As Long
Declare Function XSLPgetmessagetype Lib "xslp" Alias "_XSLPgetmessagetype@8" (ByVal theCode As Long, ByRef theType As Long) As Long
Declare Function XSLPprintmsg Lib "xslp" Alias "_XSLPprintmsg@12" (ByVal Prob As Long, ByVal theType As Long, ByVal theFormat As String) As Long
Declare Function XSLPuprintmemory Lib "xslp" Alias "_XSLPuprintmemory@4" (ByVal Prob As Long) As Long
Declare Function XSLPgetversion Lib "xslp" Alias "_XSLPgetversion@8" (ByRef theVersion As Long, ByRef theMinorVersion As Long) As Long
Declare Function XSLPinterrupt Lib "xslp" Alias "_XSLPinterrupt@8" (ByVal Prob As Long, ByVal Reason As Long) As Long
Declare Function XSLPcheckinterrupt Lib "xslp" Alias "_XSLPcheckinterrupt@4" (ByVal Prob As Long) As Long
Declare Function XSLPdecompose Lib "xslp" Alias "_XSLPdecompose@12" (ByVal Prob As Long, ByVal Count As Long, ByRef Index As Long) As Long

'****************************************************************************
' buffer sizes for intermediate buffers
'****************************************************************************
' for large problems, these might have to be increased
Global Const BUFFERSIZE = 256
Global Const HUGEBUFFERSIZE = 1024


'****************************************************************************
' Stream codes for SetStream
'****************************************************************************
Global Const XPRBIO_IN = 0
Global Const XPRBIO_OUT = 1
Global Const XPRBIO_ERR = 2


'****************************************************************************
'Integer problem attributes
'****************************************************************************

Global Const XSLP_INTATTRIBSTART = 12000
Global Const XSLP_ITER = 12001
Global Const XSLP_STATUS = 12002
Global Const XSLP_UNCONVERGED = 12003
Global Const XSLP_SBXCONVERGED = 12004
Global Const XSLP_CVS = 12005
Global Const XSLP_XVS = 12006
Global Const XSLP_UFS = 12007
Global Const XSLP_IFS = 12008
Global Const XSLP_PENALTYDELTAROW = 12009
Global Const XSLP_PENALTYDELTACOLUMN = 12010
Global Const XSLP_PENALTYERRORROW = 12011
Global Const XSLP_PENALTYERRORCOLUMN = 12012
Global Const XSLP_EQUALSCOLUMN = 12013
Global Const XSLP_VARIABLES = 12014
Global Const XSLP_IMPLICITVARIABLES = 12015
Global Const XSLP_COEFFICIENTS = 12016
Global Const XSLP_PENALTYDELTAS = 12017
Global Const XSLP_PENALTYERRORS = 12018
Global Const XSLP_PLUSPENALTYERRORS = 12019
Global Const XSLP_MINUSPENALTYERRORS = 12020
Global Const XSLP_UCCONSTRAINEDCOUNT = 12021
Global Const XSLP_MIPNODES = 12022
Global Const XSLP_MIPITER = 12023
Global Const XSLP_VERSION = 12024
Global Const XSLP_MINORVERSION = 12025
Global Const XSLP_NONLINEARCONSTRAINTS = 12026
Global Const XSLP_IPROBLEM = 12027
Global Const XSLP_TOLSETS = 12028
Global Const XSLP_VALIDATIONCOUNT = 12029
Global Const XSLP_INTERNALFUNCCALLS = 12030
Global Const XSLP_USERFUNCCALLS = 12031
Global Const XSLP_NLOBJROW = 12032
Global Const XSLP_NLOBJCOL = 12033
Global Const XSLP_UFINSTANCES = 12034
Global Const XSLP_ECFCOUNT = 12035
Global Const XSLP_CHECKSUM = 12036
Global Const XSLP_USEDERIVATIVES = 12037
Global Const XSLP_PRESOLVEPASSES = 12038
Global Const XSLP_INTERRUPT = 12039
Global Const XSLP_USEDFORMULAHASH = 12040
Global Const XSLP_DELTAS = 12041
Global Const XSLP_ITERSOL = 12043
Global Const XSLP_PVNODES = 12044
Global Const XSLP_PVPARENT = 12045
Global Const XSLP_ZEROESRESET = 12046
Global Const XSLP_ZEROESTOTAL = 12047
Global Const XSLP_ZEROESRETAINED = 12048
Global Const XSLP_THREADSTARTTIME = 12049
Global Const XSLP_THREADOPTWINNER = 12050
Global Const XSLP_PRESOLVEFIXEDSLPVAR = 12051
Global Const XSLP_PRESOLVEFIXEDDR = 12052
Global Const XSLP_PRESOLVEFIXEDCOEF = 12053
Global Const XSLP_PRESOLVEFIXEDZCOL = 12054
Global Const XSLP_PRESOLVEFIXEDNZCOL = 12055
Global Const XSLP_PRESOLVEDELETEDDELTA = 12056
Global Const XSLP_PRESOLVETIGHTENED = 12057
Global Const XSLP_INTATTRIBEND = 12058
    
'****************************************************************************
' Double control variables
'****************************************************************************

Global Const XSLP_DBLCONTROLSTART = 12100
Global Const XSLP_CASCADETOL_A = 12101
Global Const XSLP_CASCADETOL_R = 12102
Global Const XSLP_DAMP = 12103
Global Const XSLP_DAMPEXPAND = 12104
Global Const XSLP_DAMPSHRINK = 12105
Global Const XSLP_DELTA_A = 12106
Global Const XSLP_DELTA_R = 12107
Global Const XSLP_DELTA_Z = 12108
Global Const XSLP_DELTACOST = 12109
Global Const XSLP_DELTAMAXCOST = 12110
Global Const XSLP_DELTAMULT = 12111
Global Const XSLP_DJTOL = 12112
Global Const XSLP_ERRORCOST = 12113
Global Const XSLP_ERRORMAXCOST = 12114
Global Const XSLP_ERRORMULT = 12115
Global Const XSLP_ERRORTOL_A = 12116
Global Const XSLP_ERRORTOL_R = 12117
Global Const XSLP_EXPAND = 12118
Global Const XSLP_INFINITY = 12119
Global Const XSLP_MAXWEIGHT = 12120
Global Const XSLP_MINWEIGHT = 12121
Global Const XSLP_SHRINK = 12122
Global Const XSLP_ZERO = 12123

'****************************************************************************
' Convergence tolerances
'****************************************************************************

Global Const XSLP_TOLCONTROLSTART = 12124
Global Const XSLP_CTOL = 12124
Global Const XSLP_ATOL_A = 12125
Global Const XSLP_ATOL_R = 12126
Global Const XSLP_MTOL_A = 12127
Global Const XSLP_MTOL_R = 12128
Global Const XSLP_ITOL_A = 12129
Global Const XSLP_ITOL_R = 12130
Global Const XSLP_STOL_A = 12131
Global Const XSLP_STOL_R = 12132
Global Const XSLP_MVTOL = 12133
Global Const XSLP_XTOL_A = 12134
Global Const XSLP_XTOL_R = 12135
Global Const XSLP_TOLCONTROLEND = 12136
'****************************************************************************
'  End of convergence tolerances
'****************************************************************************
